--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "k-queue",
+  "name": "@safricloud/k-queue",
   "version": "0.0.2",
   "description": "Event based queuing with concurrency limits",
   "type": "module",
